# creditopia

./: .gitignore  Cargo.toml  INSTALLATION.md  README.md  build.sh  deploy_icp_ledger.txt  dfx.json  package-lock.json  package.json  setup.sh  upload-model.sh
.azle/backend_azle/: Cargo.toml
.azle/backend_azle/canister/: Cargo.toml
.azle/backend_azle/canister/src/: candid.did  compiler_info.json  lib.rs  main.js
.azle/backend_azle/canister_methods/: Cargo.toml
.azle/backend_azle/canister_methods/src/: lib.rs
scripts/: deploy_cdtp.sh  deploy_ledger.sh  deploy_ledger_icp.sh  deploy_token.sh  setup.sh  staking_test.sh  transfer_cdtp.sh
src/DIP20/: .gitignore  .gitmodules  LICENSE  README.md  spec.md
src/DIP20/motoko/: demo.sh  deploy_dip20.sh  dfx.json
src/DIP20/motoko/src/: token.mo
src/DIP20/rust/: Cargo.toml  dfx.json
src/DIP20/rust/scripts/: cap_service.sh  deploy.sh  healthcheck.sh  identity.sh
src/backend_azle/src/: index.ts
src/backend_mo/: invoice.mo  loan.mo  types.mo  wallet.mo
src/backend_mo/account/: account.mo
src/backend_rust/: Cargo.toml  backend_rust.did
src/backend_rust/src/: lib.rs  onnx.rs
src/creditopia_frontend/: package.json
src/creditopia_frontend/src/: App.jsx
src/frontend/: index.html  package.json  tailwind.config.js
src/frontend/src/: App.jsx  App.vue  icpCannister.js  index.css  main.js
src/icrc_ledger/: icrc_ledger.did  icrc_ledger.wasm
src/ledger/: ledger.did  ledger.wasm
src/staking/: staking.mo
src/user/: Cargo.toml  user.did
src/user/src/: lib.rs  onnx.rs  storage.rs
(+74 files in other folders)
