[package]
name = "backend_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
bytes = "1.5.0"
candid = "0.10"
ic-cdk = "0.14.0"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
ic-stable-structures = "0.6"
ic-wasi-polyfill = "0.4.1"
image = { version = "0.25.1", features = ["png"], default-features = false }
prost = "0.11.0"
prost-types = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
tract-onnx = { git = "https://github.com/sonos/tract", rev = "2a2914ac29390cc08963301c9f3d437b52dd321a" }
getrandom = { version = "0.2.15", features = ["js"] }